--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#MySql
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:8080/ponto_inteligente
+spring.datasource.username=root
+spring.datasource.password=
 
+#Exibir os comandos SQL
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
